# RFLogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-release.yml  test-apple-auth.yml
cmake/: FindRtlSdr.cmake
resources/: rflogger.desktop  rflogger.qrc  rflogger.rc
src/: main.cpp
src/app/: AboutDialog.cpp  CrashHandler.cpp  CrashHandler.h  MainWindow.cpp  MainWindow.h  SettingsManager.cpp  SettingsManager.h  UpdateChecker.cpp  UpdateChecker.h
src/config/: Version.h.in
src/data/: DetectedSignal.h  FrequencyMarker.h  InterferenceMonitor.cpp  InterferenceMonitor.h  PeakDetector.cpp  PeakDetector.h  RfBandPlan.cpp  RfBandPlan.h  ScanSession.cpp  ScanSession.h  SessionSerializer.cpp  SessionSerializer.h  SignalClassifier.cpp  SignalClassifier.h  SweepData.cpp  SweepData.h  TvChannelMap.cpp  TvChannelMap.h
src/devices/: DeviceManager.cpp  DeviceManager.h  ISpectrumDevice.h  RFExplorerDevice.cpp  RFExplorerDevice.h  RtlSdrDevice.cpp  RtlSdrDevice.h  RtlSdrFft.cpp  RtlSdrFft.h  TinySADevice.cpp  TinySADevice.h
src/export/: GenericCsvExporter.cpp  GenericCsvExporter.h  WwbExporter.cpp  WwbExporter.h
src/theme/: DarkTheme.cpp  DarkTheme.h
src/ui/: CaptureControls.cpp  CaptureControls.h  DevicePanel.cpp  DevicePanel.h  ExportDialog.cpp  ExportDialog.h  ExportPanel.cpp  ExportPanel.h  FrequencyListPanel.cpp  FrequencyListPanel.h  MarkerPanel.cpp  MarkerPanel.h  SpectrumWidget.cpp  SpectrumWidget.h  WaterfallWidget.cpp  WaterfallWidget.h
tests/: CMakeLists.txt  tst_GenericCsvExporter.cpp  tst_InterferenceMonitor.cpp  tst_ScanSession.cpp  tst_SessionSerializer.cpp  tst_SignalClassifier.cpp  tst_SweepData.cpp  tst_WwbExporter.cpp
